# llm-backends

./: .gitignore  CHANGELOG.md  DEVLOG.md  LICENSE  README.md  pyproject.toml
llm_backends/: __init__.py  _env.py  agent_cwd.py  claude_cli_interface.py  codex_interface.py  gemini_cli_interface.py  llm_interface.py  multi_provider_llm.py
tests/: conftest.py  test_agent_cwd.py  test_cli_hardening.py  test_llm_finish_reason.py  test_multi_provider_llm.py  test_package_contract.py  test_registry_and_dispatch.py
