[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-backends"
version = "0.1.1"
description = "Shared multi-provider LLM backend layer (API providers + hardened CLI-agent backends), extracted from the StoryDaemon/analyzer/NovelWriter family."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edward A. Thomson" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
# No install_requires: the core package is stdlib-only. Provider SDKs are
# optional extras and are only needed when the corresponding API provider is
# actually called (lazy-import contract, see README / inventory doc 7.2).
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic"]
gemini = ["google-generativeai"]
all = ["openai>=1.0.0", "anthropic", "google-generativeai"]

[tool.setuptools.packages.find]
include = ["llm_backends*"]
